--- a/orchestration/docker-compose.yml
+++ b/orchestration/docker-compose.yml
@@ -22,6 +22,9 @@ services:
         networks:
             subscribili:
                 ipv4_address: 172.99.5.16
+        ports:
+            - 5000:5000
+
 
     client:
         command: sleep 16d
